--- a/sass/_avatarComponent.scss
+++ b/sass/_avatarComponent.scss
@@ -5,7 +5,7 @@
         width: 100px;
         height: 100px;
         border-radius: 50%;
-        background-color:var(--gray);
+        background-color:var(--grey);
         margin: 10px auto 20px;
         display: flex;
         justify-content: center;
