--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -486,7 +486,7 @@
 }
 
 :root {
-  --primary_blue: #1976d2;
+  --primary: #1565c0;
   --black: #3333;
   --grey: #CFD8DC;
 }
@@ -527,6 +527,10 @@
   color: var(--black);
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+}
+
 .avatar_component {
   text-align: center;
   padding: 1em;
@@ -536,7 +540,7 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background-color: var(--gray);
+  background-color: var(--grey);
   margin: 10px auto 20px;
   display: flex;
   justify-content: center;
@@ -554,6 +558,49 @@
 .avatar_component .avatar_title {
   font-weight: 700;
   font-size: 1.1em;
+}
+
+@media only screen and (min-width: 993px) {
+  nav a.sidenav-trigger {
+    display: block !important;
+  }
+}
+
+ul.tools li {
+  padding: 0 .5rem;
+}
+
+.sidenav li a {
+  color: #151515;
+}
+
+.sidenav li.active a, .sidenav li.active i {
+  color: #1565c0 !important;
+}
+
+.avatar_side_menu {
+  background-color: #CFD8DC;
+  padding: 2.5rem 2rem .5rem;
+}
+
+.avatar_side_menu figure {
+  margin: 0 0 20px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.avatar_side_menu figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+}
+
+.avatar_side_menu .mail a {
+  font-weight: 500;
 }
 
 /* haderComponent */
@@ -613,7 +660,6 @@ input:focus {
 section.carousel {
   width: 100%;
   min-height: 100vh;
-  background-color: tomato;
 }
 
 section.carousel .carousel {
@@ -679,5 +725,139 @@ section.carousel .carousel .carousel-fixed-item.with-indicators {
 section.carousel .carousel .carousel-fixed-item.with-indicators a {
   width: 100%;
   max-width: 550px;
+}
+
+section.dashboard {
+  background-color: #CFD8DC;
+  width: 100%;
+  min-height: 100vh;
+}
+
+section.dashboard .wellcome_notifications {
+  padding: 2rem 10%;
+}
+
+section.dashboard .wellcome_notifications h3 {
+  font-weight: 500;
+  font-size: 1.3em;
+}
+
+section.dashboard .wellcome_notifications p {
+  margin: 5px 0 0;
+}
+
+.grid-content .box {
+  display: grid;
+  grid-template-columns: 60px 1fr;
+  align-items: center;
+  background-color: #fff;
+  padding: 1rem;
+  margin-bottom: 10px;
+}
+
+.grid-content .box .content {
+  padding: 0 0 0 10px;
+}
+
+.grid-content .box .content .title {
+  font-size: 1.1em;
+  font-weight: 600;
+  margin: 0 0 3px;
+}
+
+.grid-content .box .content p {
+  margin: 0;
+  color: #000;
+}
+
+.grid-content .box .number {
+  font-weight: bold;
+  font-size: 2em;
+  margin: 0;
+  text-align: center;
+}
+
+.grid-content .box.product {
+  margin-top: 10px;
+  display: inherit;
+  border-radius: 4px;
+  overflow: hidden;
+  padding: .5rem;
+}
+
+.grid-content .box.product .carousel {
+  height: 180px !important;
+}
+
+.grid-content .box.product .carousel .carousel-item {
+  padding: .5rem;
+}
+
+.grid-content .box.product .carousel .carousel-item h4 {
+  margin: 0;
+  font-size: 1em;
+  text-transform: uppercase;
+  color: #9e9e9e;
+}
+
+.grid-content .box.product .carousel .carousel-item p {
+  font-size: 1.1em;
+  margin: 0;
+  letter-spacing: 2px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #9e9e9e;
+}
+
+.grid-content .box.product .carousel .carousel-fixed-item {
+  bottom: 5px;
+  left: 10px;
+  margin: 0;
+  text-align: left;
+  font-size: 11px;
+  font-weight: 500;
+}
+
+.grid-content .box.product .carousel ul.indicators li {
+  height: 5px;
+  width: 5px;
+  margin: 7px 3px !important;
+  background-color: #bdbdbd;
+}
+
+.grid-content .box.product .carousel ul.indicators li.active {
+  background-color: var(--primary);
+}
+
+article.product figure {
+  width: 100%;
+  height: 150px;
+  background-color: #bdbdbd;
+  margin: 0;
+}
+
+article.product figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+}
+
+section.dashboard .products-category-list .category-box {
+  width: 100%;
+  height: 250px;
+  background-color: #B4BBBF;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+section.dashboard .products-category-list .category-box:nth-child(2n) {
+  background-color: #CFD8DC;
+}
+
+.filter-product #dropdownCategory {
+  top: inherit !important;
 }
 /*# sourceMappingURL=main.css.map */
