--- a/sass/_avatarComponent.scss
+++ b/sass/_avatarComponent.scss
@@ -12,6 +12,7 @@
         align-items: center;
         color: #fff;
         font-size: 1.5em;
+        overflow: hidden;
         /* img{
             width: 100%;
             height: 100%;
