--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -3,10 +3,19 @@
         display: block !important;
     }
 }
+nav .brand-logo{
+    font-size: 1.3rem;
+}
+
 ul.tools{
     li{
-        padding: 0 .5rem;
-        
+        padding: 0 1rem;
+        a{
+            margin: 0 !important;
+        }
+        i{
+            font-size: 1.5rem;
+        }
     }
 }
 .sidenav li{
@@ -40,3 +49,4 @@ ul.tools{
         }
     }
 }
+
